--- a/server/.env
+++ b/server/.env
@@ -3,5 +3,5 @@ MONGO_URI=mongodb://localhost:27017/hostel_pg_marketplace
 JWT_SECRET=YourSuperSecretJWTKey
 CLOUDINARY_CLOUD_NAME=da36kgue4
 CLOUDINARY_API_KEY=611358968345617
-CLOUDINARY_API_SECRET=BDZzg6nOqBlGR7TPdGUzLjitvVg
+CLOUDINARY_API_SECRET=
 
