--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,7 @@
   "name": "server",
   "version": "1.0.0",
   "main": "server.js",
+  "type": "module", 
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
@@ -11,23 +12,24 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "bcryptjs": "^3.0.2",
-    "cloudinary": "^2.7.0",
-    "cookie-parser": "^1.4.7",
+    "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.2.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "crypto": "^1.0.1",
-    "dotenv": "^17.2.1",
-    "express": "^5.1.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2", 
     "express-async-handler": "^1.2.0",
     "express-mongo-sanitize": "^2.2.0",
-    "express-rate-limit": "^8.0.1",
-    "helmet": "^8.1.0",
+    "express-rate-limit": "^7.3.1",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.16.4",
-    "morgan": "^1.10.1",
-    "multer": "^2.0.2",
-    "razorpay": "^2.9.6",
-    "validator": "^13.15.15",
+    "mongoose": "^8.4.1",
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.9.13", 
+    "razorpay": "^2.9.4",
     "xss-clean": "^0.1.4"
+    },
+  "devDependencies": {
+    "nodemon": "^3.1.2"
   }
 }
